# mydoc-mcp

./: .env.docker  .env.example  .gitignore  CLAUDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/agents/: mcp-server-architect.md  project-coordinator.md  project-documentor.md  search-engineer.md  storage-engineer.md  testing-specialist.md  tools-developer.md
docs/: CLAUDE_CODE_SETUP.md  CLAUDE_MD_OPTIMIZATION_PLAN.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  FINAL_DELIVERY.md  PERFORMANCE_REPORT.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PersonalDocAgent_MCP_PRD.md  Product_Roadmap.md  SYSTEM_DESIGN_REQUIREMENTS.md  TASK_2.3_FILE_WATCHER_SUMMARY.md  TROUBLESHOOTING.md
docs/product-management/: Product_Backlog.md  Product_Change_Log.md  Product_Requirements_Document.md  User_Journey_Map.md
examples/: demo_script.md
sample_documents/: api-design-guide.md
scripts/: docker-entrypoint.sh  docker-healthcheck.sh  index_document.py  integration_test.py  performance_validation.py  search_document.py  system_validation.py  test_watcher.py
src/: __init__.py  config.py  logging_config.py  main.py  prompts.py  server.py  tool_registry.py
tests/: DAY2_SYSTEM_VALIDATION_REPORT.md  TEST_REPORT.md  __init__.py  test_basic_integration.py  test_claude_integration.py  test_claude_simple.py  test_database_integration.py  test_document_parsers.py  test_file_watcher.py  test_getDocument_tool.py  test_mcp_validation.py  test_parser_integration.py  test_searchDocuments_tool.py
(+76 files in other folders)
